Fixed bugs on mobiles

--- a/frontend/public/game.css
+++ b/frontend/public/game.css
@@ -1,14 +1,18 @@
-body, html { 
-    width:  100%;
-    height: 100%;
-    margin: 0;
-    overflow: hidden;
-    font-family: Roboto, sans-serif;
-    touch-action: none;
+body,
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  font-family: Roboto, sans-serif;
+  touch-action: none;
 }
 
 #canvas-container {
-    background: #fff;
+  background: #fff;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
 }
 
 .disabled {
@@ -36,7 +40,7 @@ body, html {
   -webkit-user-select: none;
   -moz-user-select: none;
 }
-  
+
 #leaderboard {
   position: fixed;
   top: 20px;
@@ -70,38 +74,37 @@ body, html {
 }
 
 #color-picker {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    display: inline-block;
-  }
-  
-  #color-button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #000; /* Initial color */
-    cursor: pointer;
-  }
-  
-  #color-options {
-    display: none;
-    position: absolute;
-    bottom: 60px;
-    left: 0;
-    padding: 10px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  }
-  
-  .color-option {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    margin-right: 5px;
-    cursor: pointer;
-  }
-  
-  
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  display: inline-block;
+}
+
+#color-button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #000;
+  /* Initial color */
+  cursor: pointer;
+}
+
+#color-options {
+  display: none;
+  position: absolute;
+  bottom: 60px;
+  left: 0;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.color-option {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 5px;
+  cursor: pointer;
+}
